protected/sass/parts/_header.scss
/* header, sidebar */
header {
  color:$color_secondary;
}
  nav ul {
    list-style: none;
    margin: 0 0 20px;
    padding: 0;
  }
  nav li {
    padding-left:10px;

    &.active {
      a {
        color:$color_1_dark;
      }
    }
  }

  nav h3 {
    margin-bottom:.4em;
    font-weight: normal;
  }
  
#branding {
  position: relative;
}

  #logo {
    margin:20px 0 5px;
    font-size: 2em;
    white-space: nowrap;
    letter-spacing: .02em;

    a:hover {
      color: inherit;
    }
  }

h3#subtitle {
  font-weight:normal;
  font-size:1em;
  margin:0;
}


/* interactive classes */
.collapsed {
  overflow: hidden;
}
  
#collapse-site {
  position:absolute; 
  top:9px;
  left:188px;
  z-index:9999;

  padding: 0 5px;
  font-size: .7em;
  line-height: 1.2em;

  &:before {
    display: block;
    content: '\25B2';
  }

  &.active:before {
    content: '\25BC';
  }
}

